# EdgeVision-HW-Bridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cleaner.sh  environment.yml  initializer.sh  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: config.py  data_purge.py
src/hardware/: __init__.py  mac.py  testbench.py
src/hardware/bus/: __init__.py
src/hardware/testbenches/: __init__.py  tb_mac.py
src/hardware/units/: mac.py
src/ml/: dataset.py  model.py  train.py
