[project]
name = "asic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amaranth>=0.5.8",
    "amaranth-yosys>=0.50.0.0.post121",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "marimo>=0.20.4",
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = {index = "pytorch" }
