[project]
name = "edgevision-hw-bridge"
version = "0.1.0"
description = "HW/SW co-design bridge from CIFAR-10 CNN training pipeline to cycle-accurate ASIC simulation in pure Python via Amaranth HDL. Pytorch · Amaranth · CIFAR-10 · Tiny-ImageNet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Foundations (Data, Math & Low-level) ---
    "numpy<2.0",
    "pyarrow",
    "pydantic",
    "pydantic-settings",
    "scipy",
    # --- Better Standards (Replacements & Enhancements) ---
    "httpx",
    "loguru",
    "marimo",
    "orjson",
    "pendulum",
    "rich",
    "ruamel.yaml",
    "tenacity",
    "tqdm",
    "typer",
    "uvloop",
    # --- Domain Specific (Async tasks & Mock data) ---
    "celery",
    "faker",
    "rq",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "amaranth>=0.5.8",
    "amaranth-yosys>=0.50.0.0.post121",
    "contourpy>=1.3.3",
    "cuda-bindings>=13.2.0",
    "cuda-pathfinder>=1.4.3",
    "cycler>=0.12.1",
    "fonttools>=4.62.1",
    "fsspec>=2026.2.0",
    "jinja2>=3.1.6",
    "jschon>=0.11.1",
    "kiwisolver>=1.5.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "networkx>=3.6.1",
    "pillow>=12.1.1",
    "pyparsing>=3.3.2",
    "pyvcd>=0.4.1",
    "rfc3986>=2.0.0",
    "sympy>=1.14.0",
    "traitlets>=5.14.3",
    "triton>=3.3.1",
]

# --- Development Tools (Linting, Testing, Git Hooks) ---
[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

# ==========================================
# 🛠️ DEVELOPMENT TOOLS CONFIGURATION
# ==========================================

[tool.ruff]
# Max line length (100 or 120 is the modern standard over 88)
line-length = 100

[tool.ruff.lint]
# Selected rule sets
select = [
    "E",   # Base style errors (pycodestyle)
    "W",   # Style warnings
    "F",   # Logical errors (pyflakes, e.g., unused variables)
    "I",   # Automatically sort imports alphabetically (isort)
    "B",   # Detect common bugs and traps (flake8-bugbear)
    "UP",  # Enforce modern Python syntax (pyupgrade)
]

# Automatically fixable rules
fixable = ["ALL"]

[tool.ruff.format]
# Code standardization (similar to "Black")
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
edgevision-train    = "src.ml.train:main"
edgevision-sim      = "src.hardware.testbenches.tb_mac:main"
edgevision-rtl      = "src.hardware.units.mac:main"
edgevision-purge    = "src.data_purge:main"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
